# discord-bot

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
discordbot/: config.py  main.py
discordbot/integrations/: cli.py  discord_integration.py
discordbot/models/: event.py  message.py  message_context.py  response.py
discordbot/models/orm/: chat_history.py
discordbot/orchestrator/: orchestrator.py
discordbot/queue_processor/: alarm_event_processor.py
discordbot/services/: llm_service.py  user_context_service.py
discordbot/services/alarm/: __init__.py  service.py  tool_adapter.py
discordbot/services/llm_service/: __init__.py  llm_service.py
discordbot/services/user_context/: user_context_service.py
discordbot/tools/: messaging_tools.py  tool_provider.py
discordbot/utils/logging/: logging_config.py  metrics.py
hangoutsscheduler/: constants.py  main.py
hangoutsscheduler/integrations/: cli.py  discord_integration.py
hangoutsscheduler/models/: event_context.py  meesage_context.py  message_context.py
hangoutsscheduler/models/orm/: __init__.py  alarm.py  attendee.py  chat_history.py  event.py
hangoutsscheduler/queue_processor/: alarm_event_processor.py
hangoutsscheduler/services/: alarm_service.py  llm_service.py  user_context_service.py
hangoutsscheduler/services/alarm/: service.py  tool_adapter.py
hangoutsscheduler/tools/: alarm_tools.py  event_tools.py  messaging_tools.py  tool_provider.py
hangoutsscheduler/utils/: validator.py
hangoutsscheduler/utils/logging/: metrics.py  (+2 more)
tests/: test_validator.py
(+6 files in other folders)
